# agentseek-api

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  live-provider-streaming.yml  release.yml
examples/: README.md  run_sample_graphs.py  sample_graphs_manifest.json
examples/assistant_config/: agentseek.json  graph.py
examples/auth/: api_key_auth.py  bearer_token_auth.py  custom_backend.py  jwt.md  jwt_auth.py
examples/custom_routes/: app.py
examples/docker_ci_auth/: auth_backend.py  manifest.json
examples/external_graph/: graph.py  manifest.json  run.py
examples/graphs/: __init__.py
examples/live_provider_graphs/: __init__.py  graph.py  manifest.json
examples/minimal_agentseek/: agentseek.json  graph.py
scripts/: build_live_provider_matrix.py  seekdb_checkpoint_smoke.py  seekdb_embed_launcher.py  test-checkpoints.sh  test-cli-dev-samples.sh  test-cli-docker.sh  test-live-provider.sh  test-redis-runtime.sh  test-seekdb.sh  test_cli_config_autodiscovery.py  test_cli_dev_studio_smoke.py  test_cli_embed_serve_smoke.py  test_cli_serve_smoke.py  verify_docker_api.py  verify_worker_concurrency.py
src/agentseek_api/: __init__.cover  a2a_server.py  cli.py  main.cover  main.py  mcp_server.py  scheduler.py  settings.cover  settings.py  worker.py
tests/: conftest.py
tests/e2e/: conftest.py  e2e_inprocess_flow.py  e2e_live_http_flow.py  e2e_live_http_multi_graph.py  test_a2a_live.py  (+9 more)
(+176 files in other folders)
