[project]
name = "agentseek-api"
version = "0.1.0"
description = "AgentSeek API core runtime with OceanBase checkpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.1.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "langgraph>=1.0.3",
    "langgraph-sdk>=0.3.5",
    "langchain-core>=1.0.0",
    "langchain-oceanbase @ git+https://github.com/oceanbase/langchain-oceanbase.git@release/0.4.0",
    "cryptography>=45.0.0",
    "pymysql>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentseek_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests against a live server and real SeekDB/OceanBase backend",
]
